--- a/client/package.json
+++ b/client/package.json
@@ -1,26 +1,33 @@
 {
-  "name": "client",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "@types/node": "^18.0.0",
-    "@types/react": "^18.0.14",
-    "autoprefixer": "^10.4.7",
-    "eslint": "8.18.0",
-    "eslint-config-next": "12.1.6",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.3",
-    "typescript": "^4.7.4"
-  }
+	"name": "client",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@apollo/client": "^3.6.8",
+		"@auth0/nextjs-auth0": "^1.9.1",
+		"apollo-server-micro": "^3.9.0",
+		"dotenv": "^16.0.1",
+		"graphql": "^16.5.0",
+		"micro": "^9.3.4",
+		"mongoose": "^6.4.0",
+		"next": "12.1.6",
+		"react": "18.2.0",
+		"react-dom": "18.2.0"
+	},
+	"devDependencies": {
+		"@types/node": "^18.0.0",
+		"@types/react": "^18.0.14",
+		"autoprefixer": "^10.4.7",
+		"eslint": "8.18.0",
+		"eslint-config-next": "12.1.6",
+		"postcss": "^8.4.14",
+		"tailwindcss": "^3.1.3",
+		"typescript": "^4.7.4"
+	}
 }
