Add PetPageRedirectBox and started home page style

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
 		"esModuleInterop": true,
 		"module": "esnext",
 		"resolveJsonModule": true,
+		"moduleResolution": "node",
 		"isolatedModules": true,
 		"jsx": "preserve"
 	},
