--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
 		"@apollo/client": "^3.6.8",
 		"@auth0/nextjs-auth0": "^1.9.1",
 		"apollo-server-micro": "^3.9.0",
+		"deepmerge": "^4.2.2",
 		"dotenv": "^16.0.1",
 		"graphql": "^16.5.0",
+		"lodash": "^4.17.21",
 		"micro": "^9.3.4",
 		"mongoose": "^6.4.0",
 		"next": "12.1.6",
