--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@apollo/client": "^3.6.8",
 		"@auth0/nextjs-auth0": "^1.9.1",
 		"apollo-server-micro": "^3.9.0",
+		"date-fns": "^2.28.0",
 		"deepmerge": "^4.2.2",
 		"dotenv": "^16.0.1",
 		"graphql": "^16.5.0",
