--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,12 @@
 		"isolatedModules": true,
 		"jsx": "preserve"
 	},
-	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+	"include": [
+		"next-env.d.ts",
+		"**/*.ts",
+		"**/*.tsx",
+		"context/userContext.js",
+		"context/userContext.js"
+	],
 	"exclude": ["node_modules"]
 }
