--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
 		"mongoose": "^6.4.0",
 		"next": "12.1.6",
 		"react": "18.2.0",
-		"react-dom": "18.2.0"
+		"react-dom": "18.2.0",
+		"react-file-base64": "^1.0.3"
 	},
 	"devDependencies": {
 		"@types/node": "^18.0.0",
