--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@apollo/client": "^3.6.8",
 		"@auth0/nextjs-auth0": "^1.9.1",
 		"apollo-server-micro": "^3.9.0",
+		"compressorjs": "^1.1.1",
 		"date-fns": "^2.28.0",
 		"deepmerge": "^4.2.2",
 		"dotenv": "^16.0.1",
@@ -21,8 +22,7 @@
 		"mongoose": "^6.4.0",
 		"next": "12.1.6",
 		"react": "18.2.0",
-		"react-dom": "18.2.0",
-		"react-file-base64": "^1.0.3"
+		"react-dom": "18.2.0"
 	},
 	"devDependencies": {
 		"@types/node": "^18.0.0",
