--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"@apollo/client": "^3.6.8",
 		"@auth0/nextjs-auth0": "^1.9.1",
+		"@heroicons/react": "^1.0.6",
 		"apollo-server-micro": "^3.9.0",
 		"compressorjs": "^1.1.1",
 		"date-fns": "^2.28.0",
