--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"apollo-server-micro": "^3.9.0",
 		"compressorjs": "^1.1.1",
 		"date-fns": "^2.28.0",
+		"dayjs": "^1.11.3",
 		"deepmerge": "^4.2.2",
 		"dotenv": "^16.0.1",
 		"graphql": "^16.5.0",
