--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
 		"mongoose": "^6.4.0",
 		"next": "12.1.6",
 		"react": "18.2.0",
-		"react-dom": "18.2.0"
+		"react-dom": "18.2.0",
+		"react-hook-form": "^7.33.1"
 	},
 	"devDependencies": {
 		"@types/node": "^18.0.0",
