--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@auth0/nextjs-auth0": "^1.9.1",
 		"@heroicons/react": "^1.0.6",
 		"apollo-server-micro": "^3.9.0",
+		"axios": "^0.27.2",
 		"compressorjs": "^1.1.1",
 		"date-fns": "^2.28.0",
 		"dayjs": "^1.11.3",
