--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"mongoose": "^6.4.0",
 		"next": "12.1.6",
 		"react": "18.2.0",
+		"react-copy-to-clipboard": "^5.1.0",
 		"react-dom": "18.2.0",
 		"react-hook-form": "^7.33.1",
 		"react-scroll": "^1.8.7"
@@ -33,6 +34,7 @@
 	"devDependencies": {
 		"@types/node": "^18.0.0",
 		"@types/react": "^18.0.14",
+		"@types/react-copy-to-clipboard": "^5.0.4",
 		"@types/react-scroll": "^1.8.4",
 		"autoprefixer": "^10.4.7",
 		"eslint": "8.18.0",
