Clean unnecessary comments, components, and variables

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"react-scroll": "^1.8.7"
 	},
 	"devDependencies": {
+		"@types/lodash": "^4.14.182",
 		"@types/node": "^18.0.0",
 		"@types/react": "^18.0.14",
 		"@types/react-copy-to-clipboard": "^5.0.4",
